# NYC-houses

./: .gitignore  README.md  nyc-houses-app.url  nyc-houses-price-estimator.url  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
1-DataPreparation/: 2-initial-data-scan.ipynb
2-Modeling/: 7-model-interpretation.ipynb  nyc_houses_regression-xgboost-v1.joblib
3-Pipeline/: README.md  basic-training-pipeline.py
4-Deployment/: README.md  first_basic_model.joblib  ind_and_batch.py  nyc-houses-batch.py  nyc-houses-individual_and_batch.py  nyc-houses-streamlit.py
DataPreparation/: 1-initial-data-download.ipynb  2-initial-data-scan.ipynb  3-exploratory-data-analysis.ipynb  4-feature-engineering.ipynb  initial-data-download.ipynb  initial-data-scan.ipynb
Deployment/: README.md  first_basic_model.joblib  nyc-houses-streamlit.py
Modeling/: 5-modelo-baseline.ipynb  6-model-selection.ipynb  7-model-interpretation.ipynb
Pipeline/: README_PipeLine.md  basic-training-pipeline.py
data/02_intermediate/: nyc_houses_fixed.parquet
tests/: test_predictions.py
