[project]
name = "nyc-houses"
version = "0.1.0"
description = "NYC Houses project: A data science solution from start to finish."
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"

dependencies = [
    "numpy==1.23.5",
    "pandas==2.0.3",
    "pyarrow==19.0.0",
    "matplotlib==3.7.1",
    "seaborn==0.13.2",
    "scikit-learn==1.3.0",
    "scipy==1.11.4",
    "xgboost==1.7.3",
    "joblib==1.2.0",
    "dython==0.7.4",
    "streamlit==1.33.0; python_version != '3.9.7'",
]

[tool.setuptools]
packages = ["nyc_houses"]