[project]
name = "nyc-houses"
version = "0.1.0"
description = "NYC Houses project"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=1.24.0,<1.27",
    "pandas==2.0.3",
    "pyarrow==19.0.0",
    "matplotlib==3.7.1",
    "seaborn==0.13.2",
    "scikit-learn==1.3.0",
    "scipy==1.11.4",
    "xgboost==1.7.3",
    "joblib==1.2.0",
    "dython==0.7.4",
    "streamlit==1.33.0"
]

# 👇 Evita que Streamlit intente instalar el proyecto como paquete
package-mode = false